# chat

./: .dev.vars.example  .env.example  .gitignore  BUILD_SUMMARY.md  CHAT_UI_GUIDE.md  CLAUDE.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts  wrangler.chat-room.toml  wrangler.toml
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
components/: OAuthButtons.tsx
components/chat/: ChatWindow.tsx  ConversationList.tsx  CreateGroup.tsx  FriendList.tsx  FriendRequests.tsx  GroupSettings.tsx  MessageBubble.tsx  MessageInput.tsx  ProfileSettings.tsx  WorkspaceSwitcher.tsx
components/i18n/: LangRedirector.tsx
components/layout/: Footer.tsx  Navbar.tsx
components/ui/: ClientImage.tsx
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
functions/: ws.ts
hooks/: useLang.ts  useMessagePolling.ts  useRealtimeChat.ts  useStatusUpdate.ts  useWorkspaceRealtime.ts
lib/: api.ts  auth.ts  cloudflare.ts  conversations.ts  db.ts  desktop.ts  friendships.ts  i18n.ts  notifications.ts  oauth.ts  rate-limit.ts  realtime.ts  session.ts  storage.ts  types.ts  utils.ts
migrations/: 0001_init.sql  0002_add_auth_fields.sql  0003_add_push_notifications.sql  0004_add_session_version_and_rate_limits.sql  0005_add_conversation_state.sql
mobile/: pubspec.yaml
mobile/lib/: main.dart
prisma/: schema.prisma
prisma/prisma/: dev.db
public/: manifest.json
stores/: chatStore.ts
tests/: setup.ts
tests/lib/: auth.test.ts  (+5 more)
workers/: chat-room.ts
(+72 files in other folders)
