[package]
name = "chat-saas-desktop"
version = "0.1.0"
description = "Chat SaaS Desktop Application"
authors = ["Chat SaaS Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
